commit date : 210802 writer : 이 영 branch : young comment : - 포트 번호 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9002
+
 #jsp view resolver
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
@@ -12,9 +14,8 @@ spring.datasource.password=120100
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
 spring.jpa.properties.hibernate.show_sql=true
-pring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #devtool
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
-spring.resources.static-locations=file:src/main/resources/static/
