--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,6 @@ spring.jpa.properties.hibernate.show_sql=true
 pring.jpa.properties.hibernate.format_sql=true
 
 #devtool
-spring.devtools.livereload.enabled=true
-spring.freemarker.cache=false
-spring.resources.static-locations=file:src/main/resources/static/
+#spring.devtools.livereload.enabled=true
+#spring.freemarker.cache=false
+#spring.resources.static-locations=file:src/main/resources/static/
