--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,12 @@ repositories {
 war.enabled = true
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.projectlombok:lombok:1.18.18'
+    implementation 'org.projectlombok:lombok:1.18.18'
     compileOnly 'org.projectlombok:lombok'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
@@ -40,7 +41,7 @@ dependencies {
     compileOnly('org.apache.tomcat.embed:tomcat-embed-jasper')
     compile 'org.apache.taglibs:taglibs-standard:1.2.5'
     compile 'jstl:jstl:1.2'
-    compile 'org.springframework.boot:spring-boot-devtools:2.5.3'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
 test {
