--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,11 @@ spring.datasource.username=doldolseo
 spring.datasource.password=120100
 
 #Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle9iDialect
 spring.jpa.properties.hibernate.show_sql=true
 pring.jpa.properties.hibernate.format_sql=true
 
 #devtool
-spring.devtools.livereload.enabled=true
-spring.freemarker.cache=false
-spring.resources.static-locations=file:src/main/resources/static/
+#spring.devtools.livereload.enabled=true
+#spring.freemarker.cache=false
+#spring.resources.static-locations=file:src/main/resources/static/
