--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.mvc.view.suffix=.jsp
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@13.124.230.151:1521:XE
+#\uBC30\uD3EC \uC804\uC6A9 db\uC8FC\uC18C
+#spring.datasource.url=jdbc:oracle:thin:@172.31.45.120:1521:XE
 spring.datasource.username=doldolseo
 spring.datasource.password=120100
 
@@ -15,6 +17,6 @@ spring.jpa.properties.hibernate.show_sql=true
 pring.jpa.properties.hibernate.format_sql=true
 
 #devtool
-spring.devtools.livereload.enabled=true
-spring.freemarker.cache=false
-spring.resources.static-locations=file:src/main/resources/static/
+#spring.devtools.livereload.enabled=true
+#spring.freemarker.cache=false
+#spring.resources.static-locations=file:src/main/resources/static/
