--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,16 +5,24 @@ spring.mvc.view.suffix=.jsp
 #Datasource
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@13.124.230.151:1521:XE
-spring.datasource.username=doldolseo
-spring.datasource.password=120100
+#spring.datasource.url=jdbc:oracle:thin:@13.124.230.151:1521:XE
+#spring.datasource.username=doldolseo
+#spring.datasource.password=120100
+spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:XE
+spring.datasource.username=bjy
+spring.datasource.password=qorwjddus96
 
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle9iDialect
 spring.jpa.properties.hibernate.show_sql=true
 pring.jpa.properties.hibernate.format_sql=true
+vm
+spring.jpa.hibernate.ddl-auto=create-drop
 
 #devtool
-#spring.devtools.livereload.enabled=true
-#spring.freemarker.cache=false
-#spring.resources.static-locations=file:src/main/resources/static/
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.resources.static-locations=file:src/main/resources/static/
+
+#my
+server.port=9090
