--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compileOnly('org.apache.tomcat.embed:tomcat-embed-jasper')
     compile 'org.apache.taglibs:taglibs-standard:1.2.5'
     compile 'jstl:jstl:1.2'
+    compile 'org.springframework.boot:spring-boot-devtools'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 }
 
