#210807_김경일_후기게시판 구현(진행중) commit date : 210807 writer : 김경일 branch : 210806_gyeong_review comment - 데이터 전달 방식 수정 : DTO 작성 및 DTO통한 contoller-service 데이터 전달 - 후기게시판 목록 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,6 +17,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #devtool
-spring.devtools.livereload.enabled=true
-spring.freemarker.cache=false
-spring.resources.static-locations=file:src/main/resources/static/
+#spring.devtools.livereload.enabled=true
+#spring.freemarker.cache=false
+#spring.resources.static-locations=file:src/main/resources/static/
