--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,6 @@ war.enabled = true
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.18'
     compileOnly 'org.projectlombok:lombok'
@@ -31,6 +30,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    compile 'org.modelmapper:modelmapper:2.4.4'
 
 //     spring security
 //    implementation 'org.springframework.boot:spring-boot-starter-security'
