--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ repositories {
 war.enabled = true
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.projectlombok:lombok:1.18.18'
     compileOnly 'org.projectlombok:lombok'
@@ -30,6 +29,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    
 
     compile 'org.modelmapper:modelmapper:2.4.4'
 
@@ -42,7 +43,10 @@ dependencies {
     compile 'org.apache.taglibs:taglibs-standard:1.2.5'
     compile 'jstl:jstl:1.2'
     compile 'org.springframework.boot:spring-boot-devtools'
+
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    compile 'com.jwebmp.jackson.core:jackson-databind:0.66.0.1'
 }
 
 test {
