--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,12 @@ spring.mvc.view.suffix=.jsp
 #Datasource
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.datasource.driverClassName=oracle.jdbc.driver.OracleDriver
-#spring.datasource.url=jdbc:oracle:thin:@13.124.230.151:1521:XE
-#\uBC30\uD3EC \uC804\uC6A9 db\uC8FC\uC18C
-spring.datasource.url=jdbc:oracle:thin:@172.31.45.120:1521:XE
+spring.datasource.url=jdbc:oracle:thin:@13.124.230.151:1521:XE
 spring.datasource.username=doldolseo
 spring.datasource.password=120100
+
+#\uBC30\uD3EC \uC804\uC6A9 db\uC8FC\uC18C
+#spring.datasource.url=jdbc:oracle:thin:@172.31.45.120:1521:XE
 
 #Hibernate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle9iDialect
@@ -17,9 +18,9 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 #devtool
-#spring.devtools.livereload.enabled=true
-#spring.freemarker.cache=false
-#spring.resources.static-locations=file:src/main/resources/static/
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.resources.static-locations=file:src/main/resources/static/
 
 #context path
-#server.servlet.context-path=/doldolseo
+server.servlet.context-path=/doldolseo
