--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     compile 'org.modelmapper:modelmapper:2.4.4'
 
 //     spring security
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-//    testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    testImplementation 'org.springframework.security:spring-security-test'
 
     //jsp 관련
     compileOnly('org.apache.tomcat.embed:tomcat-embed-jasper')
