--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.devtools.livereload.enabled=true
 spring.freemarker.cache=false
 spring.resources.static-locations=file:src/main/resources/static/
+
+# Security log level Setting
+#logging.level.org.springframework.security=debug
