#210812_김경일_크루게시판 commit date : 210812 writer : 김경일 branch : 210812_gyeong_crew comment - 크루 게시판 구현

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,6 @@ spring.resources.static-locations=file:src/main/resources/static/
 
 # Security log level Setting
 #logging.level.org.springframework.security=debug
+
+#context path
+server.servlet.context-path=/doldolseo
