--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
 //     spring security
     implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.security:spring-security-test'
+    implementation 'org.springframework.security:spring-security-taglibs'
+
+
 
     //jsp 관련
     compileOnly('org.apache.tomcat.embed:tomcat-embed-jasper')
