#211020_백정연_마이페이지 수정 commit date : 211020 writer : 백정연 branch : 210903_jeong_optimizing comment - 마이 페이지 가입된 크루 css 수정 (크루명, 크루 사진 동일한 간격으로)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url=jdbc:oracle:thin:@jeongyeon_low?TNS_ADMIN=/Users/baekjeong
 spring.datasource.username=admin
 spring.datasource.password=Qorwjddus96@
 
-###DataSource For AWS
+##DataSource For AWS
 #spring.jpa.properties.hibernate.use_sql_comments=true
 #spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@jeongyeon_medium?TNS_ADMIN=/usr/local/tomcat8.5/wallet_JY/Wallet_jeongyeon
@@ -21,10 +21,10 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-##devtool
-#spring.devtools.livereload.enabled=true
-#spring.freemarker.cache=false
-#spring.resources.static-locations=file:src/main/resources/static/
+#devtool
+spring.devtools.livereload.enabled=true
+spring.freemarker.cache=false
+spring.resources.static-locations=file:src/main/resources/static/
 
 # Security log level Setting
 #logging.level.org.springframework.security=debug
